--- a/index-first.html
+++ b/index-first.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style-first.css" />
   </head>
   <body>
+    <div class="blob"></div>
     <div class="wrapper">
       <form action="">
         <h2>Login</h2>
@@ -16,7 +17,7 @@
             <ion-icon name="mail"></ion-icon>
           </span>
           <input type="email" name="" id="" required />
-          <label for="">email</label>
+          <label for="" class="labl-email">email</label>
         </div>
 
         <div class="input-box">
@@ -24,7 +25,7 @@
             <ion-icon name="lock-closed"></ion-icon>
           </span>
           <input type="password" name="" id="" required />
-          <label for="">password</label>
+          <label for="" class="label-pass">password</label>
         </div>
 
         <div class="remember-forget">
