add better property of input

--- a/index-first.html
+++ b/index-first.html
@@ -16,23 +16,27 @@
           <span class="icon">
             <ion-icon name="mail"></ion-icon>
           </span>
-          <input type="email" name="" id="" required />
-          <label for="" class="labl-email">email</label>
+          <input
+            type="email"
+            name="email-input"
+            id="email"
+            value="email-value"
+            required
+          />
+          <label for="email" class="labl-email">email</label>
         </div>
 
         <div class="input-box">
           <span class="icon">
             <ion-icon name="lock-closed"></ion-icon>
           </span>
-          <input type="password" name="" id="" required />
-          <label for="" class="label-pass">password</label>
+          <input type="password" name="password" id="password" value="password-value" required />
+          <label for="password" class="label-pass">password</label>
         </div>
 
         <div class="remember-forget">
-          <label>
-            <input type="checkbox" name="" id="" />
-            remeber me
-          </label>
+          <input type="checkbox" name="checkbox" id="emember" value="checkbox-value" />
+          <label for="remember"> remeber me </label>
           <a href="#">forget password?</a>
         </div>
 
@@ -45,8 +49,13 @@
     </div>
     <!-- script files  -->
     <script src="script-first.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
