--- a/index-first.html
+++ b/index-first.html
@@ -20,7 +20,7 @@
             type="email"
             name="email-input"
             id="email"
-            value="email-value"
+            value=""
             required
           />
           <label for="email" class="labl-email">email</label>
@@ -30,12 +30,23 @@
           <span class="icon">
             <ion-icon name="lock-closed"></ion-icon>
           </span>
-          <input type="password" name="password" id="password" value="password-value" required />
+          <input
+            type="password"
+            name="password"
+            id="password"
+            value=""
+            required
+          />
           <label for="password" class="label-pass">password</label>
         </div>
 
         <div class="remember-forget">
-          <input type="checkbox" name="checkbox" id="emember" value="checkbox-value" />
+          <input
+            type="checkbox"
+            name="checkbox"
+            id="emember"
+            value="checkbox-value"
+          />
           <label for="remember"> remeber me </label>
           <a href="#">forget password?</a>
         </div>
