--- a/index-first.html
+++ b/index-first.html
@@ -17,7 +17,7 @@
             <ion-icon name="mail"></ion-icon>
           </span>
           <input
-            type="email"
+            type="text"
             name="email-input"
             id="email"
             value=""
@@ -44,7 +44,7 @@
           <input
             type="checkbox"
             name="checkbox"
-            id="emember"
+            id="remember"
             value="checkbox-value"
           />
           <label for="remember"> remeber me </label>
