--- a/index-first.html
+++ b/index-first.html
@@ -8,38 +8,35 @@
     <link rel="stylesheet" href="style-first.css" />
   </head>
   <body>
+
+<div class="checkbox-wrapper-25">
+  <input type="checkbox">
+</div>
+</label>
+            <!-- ------------------------------------- -->
+
+    <!-- end btn change theme color -->
     <div class="blob"></div>
+            <!-- ------------------------------------- -->
+
     <div class="wrapper">
       <form action="">
+            <!-- ------------------------------------- -->
+
         <h2>Login</h2>
-        <div class="input-box">
-          <span class="icon">
-            <ion-icon name="mail"></ion-icon>
-          </span>
-          <input
-            type="text"
-            name="email-input"
-            id="email"
-            value=""
-            required
-          />
-          <label for="email" class="labl-email">email</label>
-        </div>
+            <!-- ------------------------------------- -->
+     
+           <div class="inputBox">
+          
+                <input type="text" required="required">
+                <span>Username</span>
+            </div>
 
-        <div class="input-box">
-          <span class="icon">
-            <ion-icon name="lock-closed"></ion-icon>
-          </span>
-          <input
-            type="password"
-            name="password"
-            id="password"
-            value=""
-            required
-          />
-          <label for="password" class="label-pass">password</label>
-        </div>
-
+            <div class="inputBox">
+                <input type="password" required="required">
+                <span>Password</span>
+            </div>
+            <!-- ------------------------------------- -->
         <div class="remember-forget">
           <input
             type="checkbox"
@@ -50,12 +47,16 @@
           <label for="remember"> remeber me </label>
           <a href="#">forget password?</a>
         </div>
+            <!-- ------------------------------------- -->
 
         <button type="submit">Login</button>
+            <!-- ------------------------------------- -->
 
         <div class="register-link">
           <p>Don't an account?<a href="#">Register</a></p>
         </div>
+            <!-- ------------------------------------- -->
+
       </form>
     </div>
     <!-- script files  -->
